fix: z-index 값 수정

--- a/frontend/src/styles/sidebar.css
+++ b/frontend/src/styles/sidebar.css
@@ -6,14 +6,14 @@
   --darkGray: #d1d5db;
   --yellow: #fede53;
   --white: #ffffff;
-  }
+}
 
 .sidebarArea {
   height: 100%;
   width: 419px;
   position: fixed;
   right: -100%;
-  z-index: 999;
+  z-index: 996;
   display: flex;
   flex-direction: column;
   box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
@@ -29,7 +29,7 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  z-index: 998;
+  z-index: 994;
   display: none;
 }
 
@@ -155,19 +155,19 @@ input:focus {
   gap: 24px;
 }
 
-.noChatIcon{
+.noChatIcon {
   font-size: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.noChatText{
+.noChatText {
   font-size: 30px;
   font-weight: 700;
 }
 
-.noChatDetail{
+.noChatDetail {
   font-size: 14px;
   font-weight: 400;
 }
@@ -255,7 +255,6 @@ input:focus {
   cursor: pointer;
 }
 
-
 .noFriendWrapper {
   width: 100%;
   display: flex;
@@ -264,19 +263,19 @@ input:focus {
   gap: 24px;
 }
 
-.noFriendIcon{
+.noFriendIcon {
   font-size: 64px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.noFriendText{
+.noFriendText {
   font-size: 30px;
   font-weight: 700;
 }
 
-.noFriendDetail{
+.noFriendDetail {
   font-size: 14px;
   font-weight: 400;
 }
@@ -292,7 +291,7 @@ input:focus {
   padding-right: 16px;
 }
 
-.noSearchText{
+.noSearchText {
   width: 100%;
   display: flex;
   justify-content: start;
@@ -326,7 +325,7 @@ input:focus {
   align-items: center;
   justify-content: center;
   gap: 12px;
-  padding : 12px
+  padding: 12px;
 }
 
 .chatInput {
@@ -357,7 +356,7 @@ input:focus {
   flex-direction: column-reverse;
   align-items: center;
   gap: 10px;
-  padding : 10px;
+  padding: 10px;
 }
 
 .chatContentWrapper {
@@ -442,7 +441,7 @@ input:focus {
   flex-direction: column;
   align-items: center;
   gap: 8px;
-  padding : 16px;
+  padding: 16px;
   border-bottom: 1px solid var(--lightGray);
 }
 
@@ -500,7 +499,7 @@ input:focus {
   justify-content: start;
   align-items: center;
   gap: 12px;
-  padding : 16px;
+  padding: 16px;
   border-bottom: 1px solid var(--lightGray);
 }
 
@@ -555,5 +554,14 @@ input:focus {
   justify-content: start;
   align-items: center;
   gap: 12px;
-  padding : 16px;
+  padding: 16px;
+}
+
+.listWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
